pdf export implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   pdf: ^3.9.0
   printing: ^5.10.1
+  path_provider: ^2.0.14
+  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,9 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
+
+  assets:
+    - assets/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
